@@ -6,6 +6,10 @@ AUX 5.5/public-packages-txt.patch 674 RMD160 94bf2c4d192d4718b9c4958ec8e3f467ac9
 MD5 1268cd79a9c91aa172746702a001445c files/5.5/public-packages-txt.patch 674
 RMD160 94bf2c4d192d4718b9c4958ec8e3f467ac9a11d4 files/5.5/public-packages-txt.patch 674
 SHA256 1e6357b7355eb21789d779c532cd7df3a1325ce2a637e5735e76cf4e0518d7f3 files/5.5/public-packages-txt.patch 674
+AUX 5.5/startscript.sh 416 RMD160 c4f3120939fcd3836986e866aec16e326b689c24 SHA1 e1f88439798161a439c82e2e37d162acdcbaf484 SHA256 19a0824c31ac1416dd23e59e0e85b783210ac83f86b9de3a10b587693d082627
+MD5 322a1b63def2d97d2e187f3abd898805 files/5.5/startscript.sh 416
+RMD160 c4f3120939fcd3836986e866aec16e326b689c24 files/5.5/startscript.sh 416
+SHA256 19a0824c31ac1416dd23e59e0e85b783210ac83f86b9de3a10b587693d082627 files/5.5/startscript.sh 416
 AUX emptyunscramble.xsl 405 RMD160 8981ca79c9d05840906fe6070b048db88fcd955a SHA1 74efad9f65ef35e67a9fc9f0ed61154844dd9800 SHA256 4914ed84313cb534bd00dd824b81e6266d9a23fdfc4f95944678b7494d8c15e6
 MD5 a80b4daebbce9c3aa54890ab458f8ecd files/emptyunscramble.xsl 405
 RMD160 8981ca79c9d05840906fe6070b048db88fcd955a files/emptyunscramble.xsl 405
@@ -18,14 +22,18 @@ EBUILD netbeans-5.0.ebuild 11089 RMD160 09a86b5e5e18d0f5f3cb5a97869c8f18b85709dd
 MD5 736e30faaed4974ed0196cd4ae85afb8 netbeans-5.0.ebuild 11089
 RMD160 09a86b5e5e18d0f5f3cb5a97869c8f18b85709dd netbeans-5.0.ebuild 11089
 SHA256 6d060fb56d6cef8798b48a0a9845e354fda7e77d112b5554b60d95f883e77b64 netbeans-5.0.ebuild 11089
-EBUILD netbeans-5.5_beta.ebuild 11334 RMD160 7a0faf58fac5c1637ac5da5b0f0932e54780939f SHA1 daeb9c0d8a5f9c98ed7f40ae060724b8d62fd565 SHA256 27fefc09b479220947ca8e1eb394925d7ab94ba4939165a8f3d39a162bae633f
-MD5 e50f7ed7e9a83782f084b8bf7967fbee netbeans-5.5_beta.ebuild 11334
-RMD160 7a0faf58fac5c1637ac5da5b0f0932e54780939f netbeans-5.5_beta.ebuild 11334
-SHA256 27fefc09b479220947ca8e1eb394925d7ab94ba4939165a8f3d39a162bae633f netbeans-5.5_beta.ebuild 11334
-MISC ChangeLog 5630 RMD160 ac0fe248720ff19e958afe3b3b9f192a1ae09e43 SHA1 ee5f544d56aa31b9bfcd90e0120b216deae39dd9 SHA256 84c84eef982e502a20b7e528004d3a46b2a054d451d9f4f5fcce7fcc9eb51d94
-MD5 88989513127c88e18e6c647f762d6535 ChangeLog 5630
-RMD160 ac0fe248720ff19e958afe3b3b9f192a1ae09e43 ChangeLog 5630
-SHA256 84c84eef982e502a20b7e528004d3a46b2a054d451d9f4f5fcce7fcc9eb51d94 ChangeLog 5630
+EBUILD netbeans-5.5_beta-r1.ebuild 11330 RMD160 3947346150d641a3decf0047c7e69a76e9657114 SHA1 d54dac7d300ce74eb5f88d1d0fddafec646f30bc SHA256 e14308f048b8d093a67c6e56748ecfd6ef41c33ba61ec4801cf0a7fffddeec5a
+MD5 f2352c189d36a62f8da8dcc907e3d19c netbeans-5.5_beta-r1.ebuild 11330
+RMD160 3947346150d641a3decf0047c7e69a76e9657114 netbeans-5.5_beta-r1.ebuild 11330
+SHA256 e14308f048b8d093a67c6e56748ecfd6ef41c33ba61ec4801cf0a7fffddeec5a netbeans-5.5_beta-r1.ebuild 11330
+EBUILD netbeans-5.5_beta.ebuild 11330 RMD160 3947346150d641a3decf0047c7e69a76e9657114 SHA1 d54dac7d300ce74eb5f88d1d0fddafec646f30bc SHA256 e14308f048b8d093a67c6e56748ecfd6ef41c33ba61ec4801cf0a7fffddeec5a
+MD5 f2352c189d36a62f8da8dcc907e3d19c netbeans-5.5_beta.ebuild 11330
+RMD160 3947346150d641a3decf0047c7e69a76e9657114 netbeans-5.5_beta.ebuild 11330
+SHA256 e14308f048b8d093a67c6e56748ecfd6ef41c33ba61ec4801cf0a7fffddeec5a netbeans-5.5_beta.ebuild 11330
+MISC ChangeLog 5939 RMD160 dbf630db0443e7bd4437fd400cc37aba9ac1b6aa SHA1 617bcf51ed75ac586131791cfc0cbe1aaef3ac6e SHA256 9c339dd205eb59350f3d5ecb2645d006c053456be263b2b191a33bbda2f976ef
+MD5 ebd465944d906da28d2460305c44faf5 ChangeLog 5939
+RMD160 dbf630db0443e7bd4437fd400cc37aba9ac1b6aa ChangeLog 5939
+SHA256 9c339dd205eb59350f3d5ecb2645d006c053456be263b2b191a33bbda2f976ef ChangeLog 5939
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
 MD5 e7fcbf7f5131562425fda47afe3b39b9 metadata.xml 1128
 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd metadata.xml 1128
@@ -36,3 +44,6 @@ SHA256 fcc40940987b2325727e61bb868cc29b07d11e574171f80e262dc9d04ee40386 files/di
 MD5 3c565ffa0d6a000e35f6feb670cbccc5 files/digest-netbeans-5.5_beta 587
 RMD160 f6df2942fbe325ce90fd536fadbb6af020f08629 files/digest-netbeans-5.5_beta 587
 SHA256 ff6cae3f8d40537659719d5b40287a8723ff336ce39b1b7c5952aa125d32e737 files/digest-netbeans-5.5_beta 587
+MD5 3c565ffa0d6a000e35f6feb670cbccc5 files/digest-netbeans-5.5_beta-r1 587
+RMD160 f6df2942fbe325ce90fd536fadbb6af020f08629 files/digest-netbeans-5.5_beta-r1 587
+SHA256 ff6cae3f8d40537659719d5b40287a8723ff336ce39b1b7c5952aa125d32e737 files/digest-netbeans-5.5_beta-r1 587
