@@ -1,0 +1,6 @@
+MD5 5a74203e2a1d20c2d894dfc8899263b7 netbeans-5_5-beta-ide_sources.tar.bz2 109415990
+RMD160 55563a6b4a59e323b41fa9376700bb76e36587b7 netbeans-5_5-beta-ide_sources.tar.bz2 109415990
+SHA256 b7ae0ccef31101446cf4db969e70ea144e3bdf93e0b87d491160c971c68e3ae9 netbeans-5_5-beta-ide_sources.tar.bz2 109415990
+MD5 7221a8a1d74b8b4955372e69e7183a36 netbeans-5_5-beta-javadoc.tar.bz2 11174280
+RMD160 574b45c2b198f73e80cd7a23c4a7e9a2a9545a04 netbeans-5_5-beta-javadoc.tar.bz2 11174280
+SHA256 172e4761ccb39c89d02b045407a79b301e4e7fdbbc2d1aa45bdeec3491fda7ee netbeans-5_5-beta-javadoc.tar.bz2 11174280
